--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0"
+    "sort-es": "^1.5.1",
+    "fast-sort": "^3.2.0",
+    "tslib": "^2.3.0",
+    "sort-array": "4.1.5"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
