--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   front:
     image: node:16
     working_dir: /home/node/app
-    command: sh -c "nx serve portal --devRemotes=admin,tower-control"
+    command: sh -c "yarn run start portal --devRemotes=admin,tower-control"
     ports:
-      - '4200:4200'
+      - "4200:4200"
     depends_on:
       node-modules:
         condition: service_completed_successfully
@@ -18,7 +18,7 @@ services:
   back:
     image: node:16
     working_dir: /home/node/app
-    command: sh -c "nx serve api"
+    command: sh -c "yarn run start api"
     depends_on:
       node-modules:
         condition: service_completed_successfully
