--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "stack": "yarn install --frozen-lockfile && (yarn run start portal --devRemotes=admin,tower-control & yarn run start api)",
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
@@ -11,87 +12,88 @@
   },
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.6.9",
-    "@graphql-codegen/typescript-resolvers": "^2.7.2",
-    "@nestjs/apollo": "^10.0.19",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/graphql": "^10.0.21",
-    "@nestjs/platform-express": "^8.0.0",
-    "@tanstack/react-query": "^4.0.10",
+    "@apollo/client": "^3.8.7",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
+    "graphql-ws": "^5.14.2",
+    "@nestjs/apollo": "^12.0.10",
+    "@nestjs/common": "^10.2.8",
+    "@nestjs/core": "^10.2.8",
+    "@nestjs/graphql": "^12.0.10",
+    "@nestjs/platform-express": "^10.2.8",
+    "@tanstack/react-query": "^5.8.1",
     "@types/graphql": "^14.5.0",
-    "antd": "^4.21.7",
-    "apollo-server-express": "^3.10.0",
-    "class-validator": "^0.13.2",
-    "core-js": "^3.6.5",
-    "graphql": "^16.5.0",
+    "antd": "^5.11.1",
+    "apollo-server-express": "^3.12.1",
+    "class-validator": "^0.14.0",
+    "core-js": "^3.33.2",
+    "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
-    "graphql-tools": "^8.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "^6.3.0",
+    "graphql-tools": "^9.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "reflect-metadata": "^0.1.13",
-    "regenerator-runtime": "0.13.7",
-    "rxjs": "^7.0.0",
-    "sort-es": "^1.5.1",
-    "fast-sort": "^3.2.0",
-    "tslib": "^2.3.0",
-    "sort-array": "4.1.5"
+    "regenerator-runtime": "v0.14.0",
+    "rxjs": "^7.8.1",
+    "sort-es": "^1.7.3",
+    "fast-sort": "^3.4.0",
+    "tslib": "^2.6.2",
+    "sort-array": "^4.1.5"
   },
   "devDependencies": {
-    "@babel/core": "7.12.13",
-    "@babel/preset-typescript": "7.12.13",
-    "@graphql-codegen/cli": "2.10.0",
-    "@graphql-codegen/introspection": "2.2.0",
-    "@graphql-codegen/typescript": "^2.7.2",
-    "@graphql-codegen/typescript-operations": "^2.5.2",
-    "@graphql-codegen/typescript-react-apollo": "3.3.2",
-    "@graphql-codegen/typescript-react-query": "^4.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@ngneat/falso": "^6.0.3",
-    "@nrwl/cli": "14.4.3",
-    "@nrwl/cypress": "14.4.3",
-    "@nrwl/eslint-plugin-nx": "14.4.3",
-    "@nrwl/jest": "14.4.3",
-    "@nrwl/linter": "14.4.3",
-    "@nrwl/nest": "^14.4.3",
-    "@nrwl/node": "14.4.3",
-    "@nrwl/react": "14.4.3",
-    "@nrwl/storybook": "^14.4.3",
-    "@nrwl/web": "14.4.3",
-    "@nrwl/workspace": "14.4.3",
-    "@storybook/addon-essentials": "~6.5.9",
-    "@storybook/builder-webpack5": "~6.5.9",
-    "@storybook/core-server": "~6.5.9",
-    "@storybook/manager-webpack5": "~6.5.9",
-    "@storybook/react": "~6.5.9",
-    "@svgr/webpack": "^5.4.0",
-    "@testing-library/react": "13.3.0",
-    "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "babel-jest": "27.5.1",
-    "babel-loader": "8.1.0",
-    "cypress": "^9.1.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.0",
-    "eslint-plugin-react": "7.30.1",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "27.5.1",
-    "nx": "14.4.3",
-    "prettier": "^2.6.2",
-    "react-test-renderer": "18.2.0",
-    "ts-jest": "27.1.4",
-    "ts-node": "~10.8.0",
-    "typescript": "~4.7.2",
-    "url-loader": "^3.0.0"
+    "@babel/core": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/introspection": "^4.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.1.0",
+    "@graphql-codegen/typescript-react-query": "^4.1.0",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.2.8",
+    "@ngneat/falso": "^7.1.1",
+    "@nrwl/cli": "^15.9.3",
+    "@nrwl/cypress": "^17.1.1",
+    "@nrwl/eslint-plugin-nx": "^17.1.1",
+    "@nrwl/jest": "^17.1.1",
+    "@nrwl/linter": "^17.1.1",
+    "@nrwl/nest": "^17.1.1",
+    "@nrwl/node": "^17.1.1",
+    "@nrwl/react": "^17.1.1",
+    "@nrwl/storybook": "^17.1.1",
+    "@nrwl/web": "^17.1.1",
+    "@nrwl/workspace": "^17.1.1",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/builder-webpack5": "^7.5.3",
+    "@storybook/core-server": "^7.5.3",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^7.5.3",
+    "@svgr/webpack": "^8.1.0",
+    "@testing-library/react": "14.1.0",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "babel-jest": "29.7.0",
+    "babel-loader": "^9.1.3",
+    "cypress": "^13.5.0",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
+    "nx": "^17.1.1",
+    "prettier": "^3.0.3",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "url-loader": "^4.1.1"
   }
 }
